codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__shutdown_in_progress.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› 正在关闭...                           " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"                                        "
"                                        "
"                                        "
